- visual studio project build output paths
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:33.843 as Changeset 944

--- a/SnakeWorld Game iPhone/td/td.vcproj
+++ b/SnakeWorld Game iPhone/td/td.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(ProjectDir)..\$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="0"
@@ -68,6 +68,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib wininet.lib OpenAL32.lib EFX-Util.lib"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
 				ManifestFile="$(OutDir)\$(IntDir)\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
@@ -100,7 +101,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(ProjectDir)..\$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="0"
@@ -142,7 +143,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="winmm.lib &quot;C:\Program Files\OpenAL_SDK\libs\Win32\OpenAL32.lib&quot; &quot;C:\Program Files\OpenAL_SDK\libs\Win32\EFX-Util.lib&quot;"
+				AdditionalDependencies="winmm.lib OpenAL32.lib EFX-Util.lib"
+				OutputFile="$(OutDir)\$(IntDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
