SnakeWorld Game iPhone - windows release compilation fix login added, users statistics
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:35.41 as Changeset 945

--- a/SnakeWorld Game iPhone/td/td.vcproj
+++ b/SnakeWorld Game iPhone/td/td.vcproj
@@ -143,7 +143,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="winmm.lib OpenAL32.lib EFX-Util.lib"
+				AdditionalDependencies="winmm.lib wininet.lib OpenAL32.lib EFX-Util.lib"
 				OutputFile="$(OutDir)\$(IntDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
