- failed texture load fix - only one instance can be running
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:52.267 as Changeset 975

--- a/SnakeWorld Game/SnakeWorld Game.vcproj
+++ b/SnakeWorld Game/SnakeWorld Game.vcproj
@@ -189,10 +189,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\connection.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\errorlog.cpp"
 				>
 			</File>
@@ -472,20 +468,24 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="connection"
+				>
+				<File
+					RelativePath=".\connection.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\connectionlocal.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\binaryio.h"
-				>
-			</File>
-			<File
-				RelativePath=".\connection.h"
-				>
-			</File>
 			<File
 				RelativePath=".\errorlog.h"
 				>
@@ -751,6 +751,22 @@
 				>
 				<File
 					RelativePath=".\web.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="connection"
+				>
+				<File
+					RelativePath=".\binaryio.h"
+					>
+				</File>
+				<File
+					RelativePath=".\connection.h"
+					>
+				</File>
+				<File
+					RelativePath=".\connectionlocal.h"
 					>
 				</File>
 			</Filter>
