- users converted to the new CMS - SnakeWorld game uses new version of DX SDK
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:59.36 as Changeset 989

--- a/SnakeWorld Highscore Web/web.config
+++ b/SnakeWorld Highscore Web/web.config
@@ -27,6 +27,12 @@
    providerName="System.Data.SqlClient" />
   <add name="sacredware_webConnectionString" connectionString="Data Source=.\SQLEXPRESS;Database=sacredware_web;Integrated Security=True"
    providerName="System.Data.SqlClient" />
+  <add name="cmsdbConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=cmsdb;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="snakeworldConnectionString1" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=snakeworld;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="sacredware_webConnectionString1" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=sacredware_web;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.web>
 		<!-- 
