--- a/SnakeWorld Server Engine/app.config
+++ b/SnakeWorld Server Engine/app.config
@@ -9,5 +9,8 @@
         <add name="SnakeWorld_Server.Properties.Settings.snakeworldConnectionString"
             connectionString="Data Source=.\SQLEXPRESS;Database=snakeworld;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="SnakeWorld_Server.Properties.Settings.cmsdbConnectionString"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=cmsdb;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
